--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -3,7 +3,7 @@
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/montserratregular.woff2") format("woff2");
+  src: url("../fonts/montserratregular.woff2") format("woff2"), url("../fonts/montserratregular.woff") format("woff");
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/montserratmedium.woff2") format("woff2");
+  src: url("../fonts/montserratmedium.woff2") format("woff2"), url("../fonts/montserratmedium.woff") format("woff");
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
-  src: url("../fonts/montserratsemibold.woff2") format("woff2");
+  src: url("../fonts/montserratsemibold.woff2") format("woff2"), url("../fonts/montserratsemibold.woff") format("woff");
 }
 
 @font-face {
@@ -27,5 +27,5 @@
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/montserratbold.woff2") format("woff2");
+  src: url("../fonts/montserratbold.woff2") format("woff2"), url("../fonts/montserratbold.woff2") format("woff2");
 }
