--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -61,6 +61,10 @@
     }
   }
 
+  @include vp-1023 {
+    justify-content: space-around;
+  }
+
   @include vp-767 {
     flex-direction: column;
     justify-content: center;
@@ -80,6 +84,8 @@
 
   @include vp-1023 {
     width: 309px;
+    margin-right: 0;
+    margin-left: 0;
   }
 
   @include vp-767 {
