--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -70,9 +70,10 @@
     position: absolute;
     top: 0;
     right: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    display: block;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: flex-start;
     width: 89%;
     height: 100vh;
     padding: 20px 15px;
