--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -71,14 +71,29 @@
     top: 0;
     right: 0;
     display: block;
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: flex-start;
     width: 89%;
     height: 100vh;
     padding: 20px 15px;
 
     background-color: $color-default-white;
+
+    overflow-y: auto;
+
+    scrollbar-width: thin;
+    scrollbar-color: $color-default-white $color-blue;
+
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: $color-default-white;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $color-blue;
+      border: 3px solid $color-blue;
+    }
   }
 }
 
